Added file output for critical version

--- a/TPAssignment2/TPAssignment2.vcxproj
+++ b/TPAssignment2/TPAssignment2.vcxproj
@@ -145,6 +145,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="TPAssignment2.c" />
+    <ClCompile Include="TPAssignment2Crit.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
